[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/flags_world.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Overpass-Regular_18.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/ui/sound_effects_on.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/music_on.png" type="Texture" id=6]
[ext_resource path="res://assets/images/background.png" type="Texture" id=7]
[ext_resource path="res://assets/images/base_tileset.tres" type="TileSet" id=8]
[ext_resource path="res://assets/images/ui/home.png" type="Texture" id=9]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 12, 4, 0, 65536, 2, 0, 65548, 4, 0, 131072, 2, 0, 131084, 4, 0, 196608, 2, 0, 196620, 4, 0, 262144, 2, 0, 262156, 4, 0, 327680, 2, 0, 327692, 4, 0, 393216, 2, 0, 393228, 4, 0, 458752, 2, 0, 458764, 4, 0, 524288, 2, 0, 524300, 4, 0, 589824, 2, 0, 589836, 4, 0, 655360, 2, 0, 655372, 4, 0, 720896, 2, 0, 720908, 4, 0, 786432, 2, 0, 786444, 4, 0, 851968, 2, 0, 851980, 4, 0, 917504, 2, 0, 917516, 4, 0, 983040, 2, 0, 983052, 4, 0, 1048576, 2, 0, 1048588, 4, 0, 1114112, 2, 0, 1114124, 4, 0, 1179648, 2, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 4, 0 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "TITLE_SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 112.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Container"]
margin_left = 108.0
margin_top = 163.0
margin_right = 308.0
margin_bottom = 301.0
custom_constants/separation = 60

[node name="Language" type="HBoxContainer" parent="Container/VBox"]
margin_right = 200.0
margin_bottom = 22.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/VBox/Language"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "LABEL_LANGUAGE"
clip_text = true

[node name="ButtonEn" type="Button" parent="Container/VBox/Language"]
margin_left = 120.0
margin_right = 150.0
margin_bottom = 22.0
rect_min_size = Vector2( 30, 22 )
mouse_default_cursor_shape = 2

[node name="Sprite" type="Sprite" parent="Container/VBox/Language/ButtonEn"]
position = Vector2( 15, 11 )
texture = ExtResource( 3 )
hframes = 2

[node name="ButtonFr" type="Button" parent="Container/VBox/Language"]
margin_left = 170.0
margin_right = 200.0
margin_bottom = 22.0
rect_min_size = Vector2( 30, 22 )
mouse_default_cursor_shape = 2

[node name="Sprite" type="Sprite" parent="Container/VBox/Language/ButtonFr"]
position = Vector2( 15, 11 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="Sound" type="HBoxContainer" parent="Container/VBox"]
margin_top = 82.0
margin_right = 200.0
margin_bottom = 138.0
custom_constants/separation = 20
alignment = 1

[node name="MusicButton" type="Button" parent="Container/VBox/Sound"]
margin_left = 28.0
margin_right = 90.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )

[node name="EffectsButton" type="Button" parent="Container/VBox/Sound"]
margin_left = 110.0
margin_right = 172.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 5 )

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.0
margin_top = -120.0
margin_right = 31.0
margin_bottom = -64.0
mouse_default_cursor_shape = 2
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Container/VBox/Language/ButtonEn" to="." method="_on_ButtonEn_pressed"]
[connection signal="pressed" from="Container/VBox/Language/ButtonFr" to="." method="_on_ButtonFr_pressed"]
[connection signal="pressed" from="Container/VBox/Sound/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Container/VBox/Sound/EffectsButton" to="." method="_on_EffectsButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
